metadata/force-app/main/default/objects/CustomName_nTOof__c/CustomName_nTOof__c.object-meta.xml
<CustomObject>
    <description>Description_pNdaV</description>
    <label>CustomLabel_OBAAN</label>
    <nameField>
        <label>CustomLabel_OBAAN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_OBAANs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>