metadata/force-app/main/default/objects/CustomName_nTOof__c/fields/CustomField_ejyYs__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ejyYs__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlRpOo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>